force-app/main/default/objects/ST_DeliveryRecord__c/ST_DeliveryRecord__c.object-meta.xml
<CustomObject>
    <label>納入実績</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>納入実績名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>