force-app/main/default/objects/ST_DeliveryRecord__c/fields/adjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>adjustmentAmount__c</fullName>
    <label>端数調整金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>