force-app/main/default/objects/ST_DeliveryRecord__c/fields/Archive_ST_unit_price__c.field-meta.xml
<CustomField>
    <fullName>Archive_ST_unit_price__c</fullName>
    <label>（Archive）単価</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>