force-app/main/default/objects/ST_DeliveryRecord__c/fields/AutoDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>AutoDiscountAmount__c</fullName>
    <label>値引き金額（自動）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>