force-app/main/default/objects/ST_DeliveryRecord__c/fields/Billamount__c.field-meta.xml
<CustomField>
    <fullName>Billamount__c</fullName>
    <label>請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>