force-app/main/default/objects/ST_DeliveryRecord__c/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求済み</label>
    <type>Checkbox</type>
</CustomField>