force-app/main/default/objects/ST_DeliveryRecord__c/fields/billingCategory__c.field-meta.xml
<CustomField>
    <fullName>billingCategory__c</fullName>
    <formula>IF( isThisMonth__c , &quot;当月請求分&quot;, &quot;前月累積分&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求分類</label>
    <type>Text</type>
</CustomField>