force-app/main/default/objects/ST_DeliveryRecord__c/fields/BillingDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDate__c</fullName>
    <label>請求締日</label>
    <type>Date</type>
</CustomField>