force-app/main/default/objects/ST_DeliveryRecord__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>数量チェック</label>
    <type>Checkbox</type>
</CustomField>