force-app/main/default/objects/ST_DeliveryRecord__c/fields/CheckQuantity__c.field-meta.xml
<CustomField>
    <fullName>CheckQuantity__c</fullName>
    <formula>IF(Check__c, ST_quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数量確認</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>