force-app/main/default/objects/ST_DeliveryRecord__c/fields/ContractTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractTaxAmount__c</fullName>
    <formula>IF(
    isOutOfContract__c,
    0,
    ROUND(	ShippingAmountALL__c* 0.1, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約消費税額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>