force-app/main/default/objects/ST_DeliveryRecord__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>値引き金額（手動）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>