force-app/main/default/objects/ST_DeliveryRecord__c/fields/DX_Num1__c.field-meta.xml
<CustomField>
    <fullName>DX_Num1__c</fullName>
    <formula>IF(
  CONTAINS(ST_item_converted__c, &quot;値引&quot;),
  2,
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>帳票DX順番①_品目</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>