force-app/main/default/objects/ST_DeliveryRecord__c/fields/DX_Num2__c.field-meta.xml
<CustomField>
    <fullName>DX_Num2__c</fullName>
    <formula>IF(
    CONTAINS(ST_item_converted__c, &quot;値引&quot;),
    4,
    CASE(
        ST_item_converted__c,
        &quot;異形棒鋼&quot;, 1,
        &quot;ネジ鉄筋&quot;, 2,
        3
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>帳票DX順番②_品目</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>