force-app/main/default/objects/ST_DeliveryRecord__c/fields/Excludedfrombilling_summary__c.field-meta.xml
<CustomField>
    <fullName>Excludedfrombilling_summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求・サマリ対象外</label>
    <type>Checkbox</type>
</CustomField>