force-app/main/default/objects/ST_DeliveryRecord__c/fields/flowUpdateOccurred__c.field-meta.xml
<CustomField>
    <fullName>flowUpdateOccurred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>フロー更新処理発生</label>
    <type>Checkbox</type>
</CustomField>