force-app/main/default/objects/ST_DeliveryRecord__c/fields/InContractAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>InContractAmountInclTax__c</fullName>
    <formula>IF(
    ST_item__c = &quot;端数調整&quot;,
    adjustmentAmount__c,
    IF(
        OR(isOutOfContract__c, Excludedfrombilling_summary__c),
        0,
        ROUND(ShippingAmountALL__c * 1.1, 0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約内税込み金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>