force-app/main/default/objects/ST_DeliveryRecord__c/fields/IsBilledAmountExclTax__c.field-meta.xml
<CustomField>
    <fullName>IsBilledAmountExclTax__c</fullName>
    <formula>OR(
 Excludedfrombilling_summary__c == FALSE, 
 isOutOfContractSplit__c == FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>④請求済金額_税抜（条件判定用）</label>
    <type>Checkbox</type>
</CustomField>