force-app/main/default/objects/ST_DeliveryRecord__c/fields/isBillingAfterNextMonth__c.field-meta.xml
<CustomField>
    <fullName>isBillingAfterNextMonth__c</fullName>
    <formula>BillingDate__c &gt;= DATE(
    YEAR(TODAY()),
    MONTH(TODAY()) + 1,
    1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>翌月以降請求flg</label>
    <type>Checkbox</type>
</CustomField>