force-app/main/default/objects/ST_DeliveryRecord__c/fields/isBulkProcess__c.field-meta.xml
<CustomField>
    <fullName>isBulkProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>一括処理用項目</label>
    <type>Checkbox</type>
</CustomField>