force-app/main/default/objects/ST_DeliveryRecord__c/fields/isExistBillingDeadLine__c.field-meta.xml
<CustomField>
    <fullName>isExistBillingDeadLine__c</fullName>
    <formula>NOT(ISBLANK( BillingDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求締日記入済flg</label>
    <type>Checkbox</type>
</CustomField>