force-app/main/default/objects/ST_DeliveryRecord__c/fields/isMatchTargetBillingCloseDate__c.field-meta.xml
<CustomField>
    <fullName>isMatchTargetBillingCloseDate__c</fullName>
    <formula>AND(BillingDate__c ==  ST_field_name__r.targetBillingCloseDate__c, NOT(ISBLANK(BillingDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>現場-対象請求締日との一致</label>
    <type>Checkbox</type>
</CustomField>