force-app/main/default/objects/ST_DeliveryRecord__c/fields/isOutOfContract__c.field-meta.xml
<CustomField>
    <fullName>isOutOfContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約外flg</label>
    <type>Checkbox</type>
</CustomField>