force-app/main/default/objects/ST_DeliveryRecord__c/fields/isOutOfContractSplit__c.field-meta.xml
<CustomField>
    <fullName>isOutOfContractSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約外分割flg</label>
    <type>Checkbox</type>
</CustomField>