force-app/main/default/objects/ST_DeliveryRecord__c/fields/isSkipBillingDataSync__c.field-meta.xml
<CustomField>
    <fullName>isSkipBillingDataSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求データ反映回避flg</label>
    <type>Checkbox</type>
</CustomField>