force-app/main/default/objects/ST_DeliveryRecord__c/fields/isThisMonth__c.field-meta.xml
<CustomField>
    <fullName>isThisMonth__c</fullName>
    <formula>AND(
    YEAR( BillingDate__c ) = YEAR(TODAY()),
    MONTH( BillingDate__c ) = MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当月flg</label>
    <type>Checkbox</type>
</CustomField>