force-app/main/default/objects/ST_DeliveryRecord__c/fields/MakerCode__c.field-meta.xml
<CustomField>
    <fullName>MakerCode__c</fullName>
    <label>メーカーコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>