force-app/main/default/objects/ST_DeliveryRecord__c/fields/memo_invoice__c.field-meta.xml
<CustomField>
    <fullName>memo_invoice__c</fullName>
    <label>備考（請求書反映）</label>
    <type>TextArea</type>
</CustomField>