force-app/main/default/objects/ST_DeliveryRecord__c/fields/nonProductSortOrder__c.field-meta.xml
<CustomField>
    <fullName>nonProductSortOrder__c</fullName>
    <formula>CASE(
    ST_item__c,
    &quot;運搬費&quot;, 1,
    &quot;ユニック代&quot;, 2,
    &quot;宅急便&quot;, 3,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>非製品ソート順</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>