force-app/main/default/objects/ST_DeliveryRecord__c/fields/OutofContractAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>OutofContractAmountInclTax__c</fullName>
    <formula>IF(
    isOutOfContract__c,
    ROUND(ShippingAmountALL__c * 1.1, 0),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約外税込み金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>