force-app/main/default/objects/ST_DeliveryRecord__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>入金済み</label>
    <length>255</length>
    <type>Text</type>
</CustomField>