force-app/main/default/objects/ST_DeliveryRecord__c/fields/primarySortOrder__c.field-meta.xml
<CustomField>
    <fullName>primarySortOrder__c</fullName>
    <label>正規ソート順</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>