force-app/main/default/objects/ST_DeliveryRecord__c/fields/report_t__c.field-meta.xml
<CustomField>
    <fullName>report_t__c</fullName>
    <formula>ST_quantity__c  / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数量（レポート用_t）</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>