force-app/main/default/objects/ST_DeliveryRecord__c/fields/ShippingAmount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAmount__c</fullName>
    <formula>ST_unit_price__c * ST_quantity__c *
IF(
  OR(isOutOfContract__c, Excludedfrombilling_summary__c),
  0,
  1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出荷金額_契約内</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>