force-app/main/default/objects/ST_DeliveryRecord__c/fields/ShippingAmountALL__c.field-meta.xml
<CustomField>
    <fullName>ShippingAmountALL__c</fullName>
    <formula>ROUND(ST_unit_price__c * ST_quantity__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出荷金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>