force-app/main/default/objects/ST_DeliveryRecord__c/fields/sortorde_shipping_date__c.field-meta.xml
<CustomField>
    <fullName>sortorde_shipping_date__c</fullName>
    <formula>IF(
  NOT(ISBLANK(ST_shipping_date__c)),
  1,
  2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ソート順_出荷日有無</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>