force-app/main/default/objects/ST_DeliveryRecord__c/fields/sortOrder__c.field-meta.xml
<CustomField>
    <fullName>sortOrder__c</fullName>
    <label>ソート順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>