force-app/main/default/objects/ST_DeliveryRecord__c/fields/splitSourceRecord__c.field-meta.xml
<CustomField>
    <fullName>splitSourceRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>分割元納入実績</label>
    <referenceTo>ST_DeliveryRecord__c</referenceTo>
    <relationshipLabel>分割納入実績</relationshipLabel>
    <relationshipName>splitSourceRecord</relationshipName>
    <type>Lookup</type>
</CustomField>