force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_billing_delivery__c.field-meta.xml
<CustomField>
    <fullName>ST_billing_delivery__c</fullName>
    <label>請求発送日</label>
    <type>Date</type>
</CustomField>