force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_change_flag__c.field-meta.xml
<CustomField>
    <fullName>ST_change_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変更フラグ</label>
    <type>Checkbox</type>
</CustomField>