force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_data_capturing__c.field-meta.xml
<CustomField>
    <fullName>ST_data_capturing__c</fullName>
    <label>データ取込日</label>
    <type>Date</type>
</CustomField>