force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_delivery_achievement_number__c.field-meta.xml
<CustomField>
    <fullName>ST_delivery_achievement_number__c</fullName>
    <label>納入実績番号</label>
    <length>36</length>
    <type>Text</type>
</CustomField>