force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_item__c.field-meta.xml
<CustomField>
    <fullName>ST_item__c</fullName>
    <label>品目</label>
    <length>225</length>
    <type>Text</type>
</CustomField>