force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_item_converted__c.field-meta.xml
<CustomField>
    <fullName>ST_item_converted__c</fullName>
    <formula>IF(
    CONTAINS(ST_item__c, &quot;運搬費&quot;),
    ST_item__c&amp;&quot;_&quot;&amp;Maker__c,
    CASE(
        ST_item__c,
        &quot;異形丸鋼&quot;, &quot;異形棒鋼&quot;,
        &quot;値引き(システム)&quot;, &quot;値引&quot;,
        &quot;値引(システム)&quot;, &quot;値引&quot;,
        &quot;ﾈｼﾞ鉄筋&quot;, &quot;ネジ鉄筋&quot;,
        &quot;運送費&quot;, &quot;運搬費_&quot;&amp;Maker__c,
        /* 必要なら他の変換ルールもここに追加 */
        ST_item__c  /* デフォルト（変換なし） */
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>品目（変換済）</label>
    <type>Text</type>
</CustomField>