force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_item_converted_invoice__c.field-meta.xml
<CustomField>
    <fullName>ST_item_converted_invoice__c</fullName>
    <formula>CASE(
ST_item__c,
&quot;異形丸鋼&quot;, &quot;異形棒鋼&quot;,
&quot;値引き(システム)&quot;, &quot;値引&quot;,
&quot;値引(システム)&quot;, &quot;値引&quot;,
&quot;ﾈｼﾞ鉄筋&quot;, &quot;ネジ鉄筋&quot;,
/* 必要なら他の変換ルールもここに追加 */
ST_item__c /* デフォルト（変換なし） */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>品目（変換）_請求用</label>
    <type>Text</type>
</CustomField>