force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_item_pecification__c.field-meta.xml
<CustomField>
    <fullName>ST_item_pecification__c</fullName>
    <formula>ST_item__c &amp; &quot;_&quot; &amp;  ST_specification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>品目_仕様</label>
    <type>Text</type>
</CustomField>