force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_mill__c.field-meta.xml
<CustomField>
    <fullName>ST_mill__c</fullName>
    <label>ミルシート 発送日</label>
    <length>100</length>
    <type>Text</type>
</CustomField>