force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_project_number__c.field-meta.xml
<CustomField>
    <fullName>ST_project_number__c</fullName>
    <label>案件番号</label>
    <length>225</length>
    <type>Text</type>
</CustomField>