force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_quantity__c.field-meta.xml
<CustomField>
    <fullName>ST_quantity__c</fullName>
    <label>数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>