force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_receipt_submission_check__c.field-meta.xml
<CustomField>
    <fullName>ST_receipt_submission_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受領書送付 チェック</label>
    <type>Checkbox</type>
</CustomField>