force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_shipping_date__c.field-meta.xml
<CustomField>
    <fullName>ST_shipping_date__c</fullName>
    <label>出荷日</label>
    <type>Date</type>
</CustomField>