force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_shipping_date_invoice__c.field-meta.xml
<CustomField>
    <fullName>ST_shipping_date_invoice__c</fullName>
    <formula>IF(ISBLANK(ST_shipping_date__c), &apos;&apos;,
TEXT(YEAR(ST_shipping_date__c)) &amp; &apos;/&apos; &amp; TEXT(MONTH(ST_shipping_date__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(ST_shipping_date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出荷日_請求用</label>
    <type>Text</type>
</CustomField>