force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_specification__c.field-meta.xml
<CustomField>
    <fullName>ST_specification__c</fullName>
    <label>仕様</label>
    <length>225</length>
    <type>Text</type>
</CustomField>