force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_unit__c.field-meta.xml
<CustomField>
    <fullName>ST_unit__c</fullName>
    <label>単位</label>
    <length>225</length>
    <type>Text</type>
</CustomField>