force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_unit_price__c.field-meta.xml
<CustomField>
    <fullName>ST_unit_price__c</fullName>
    <formula>ST_unit_price_wao__c +  unitDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>単価</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>