force-app/main/default/objects/ST_DeliveryRecord__c/fields/ST_unit_price_wao__c.field-meta.xml
<CustomField>
    <fullName>ST_unit_price_wao__c</fullName>
    <label>単価（WAO）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>