force-app/main/default/objects/ST_DeliveryRecord__c/fields/unitDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>unitDiscountAmount__c</fullName>
    <label>調整金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>